...
			} label: {
				Label("Import Themes", systemImage: "square.and.arrow.down")
			}
			Button(role: .destructive) {
				showDeleteConfirmation.toggle()
			} label: {
				Label("Delete All Themes", systemImage: "trash")
					.foregroundStyle(.red)
			}
		}
		.fileExporter(isPresented: $exportThemes, document: ThemesDocument(themes), contentType: .json, defaultFilename: ThemesBackup.fileName) { _ in }
		.fileImporter(isPresented: $importThemes, allowedContentTypes: [.json]) { result in
			let importSucceeded = importThemes(for: result, context: context, themesCount: themes.count)
			importStatusMessage = importSucceeded ? "Import succeeded" : "Import failed"
			showImportStatusAlert = true
		}
		.alert(importStatusMessage, isPresented: $showImportStatusAlert) {
			Button("OK", role: .cancel, action: {})
				.keyboardShortcut(.defaultAction)
		}
		.confirmationDialog("Are you sure you want to delete all your themes?", isPresented: $showDeleteConfirmation) {
			Button(role: .destructive) {
				themes.forEach({ theme in context.delete(theme) })
			} label: {
...
