...
						sheetTheme = theme
					} label: {
						Label("Create theme", systemImage: "plus")
					}
				}
			}
			.navigationTitle("Themes")
			.toolbar {
				ToolbarItem(placement: .confirmationAction) {
					Button {
						dismiss()
					} label: {
						Label("Done", systemImage: "checkmark")
					}
				}
			}
			.sheet(item: $sheetTheme) { selectedTheme in
				ThemeView(theme: selectedTheme)
			}
...
