...
			.fileImporter(isPresented: $importThemes, allowedContentTypes: [.json]) { result in
				let importSucceeded = importThemes(for: result, context: context, themesCount: themes.count)
				importStatusMessage = importSucceeded ? "Import succeeded" : "Import failed"
				showImportStatusAlert = true
			}
#endif
			TextField(text: $themesDataJSON, prompt: Text("Theme Data JSON")) {
				Label("Import Themes Data", systemImage: "ellipsis.curlybraces")
			}
			.onSubmit {
				guard !themesDataJSON.isEmpty else {
					return
				}
...
